--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^0.26.1",
     "eslint": "2.10.2",
     "eslint-loader": "1.3.0",
+    "express": "^4.14.1",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "0.10.0",
     "html-webpack-plugin": "2.28.0",
@@ -56,6 +57,7 @@
     "karma-nyan-reporter": "0.2.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "2.0.2",
+    "lokijs": "^1.4.2",
     "ng-annotate-loader": "0.2.0",
     "node-sass": "4.5.0",
     "nodemon": "^1.11.0",
@@ -64,6 +66,7 @@
     "sass-lint": "^1.10.2",
     "sass-loader": "5.0.1",
     "sasslint-webpack-plugin": "^1.0.4",
+    "socket.io": "^1.7.2",
     "style-loader": "^0.13.1",
     "supports-color": "3.1.2",
     "url-loader": "0.5.7",
@@ -79,6 +82,7 @@
     "angular-animate": "1.5.9",
     "angular-aria": "1.5.9",
     "angular-material": "^1.1.3",
+    "angular-material-data-table": "^0.10.10",
     "angular-ui-router": "^0.3.2",
     "whatwg-fetch": "^2.0.1"
   }
