--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "angular-aria": "1.5.9",
     "angular-material": "^1.1.3",
     "angular-material-data-table": "^0.10.10",
+    "angular-messages": "1.5.9",
     "angular-ui-router": "^0.3.2",
     "whatwg-fetch": "^2.0.1"
   }
