--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "karma-nyan-reporter": "0.2.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "2.0.2",
-    "lokijs": "^1.4.2",
+    "nedb": "^1.8.0",
     "ng-annotate-loader": "0.2.0",
     "node-sass": "4.5.0",
     "nodemon": "^1.11.0",
