--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "angular": "1.5.9",
     "angular-animate": "1.5.9",
     "angular-aria": "1.5.9",
+    "angular-i18n": "1.5.9",
     "angular-material": "^1.1.3",
     "angular-material-data-table": "^0.10.10",
     "angular-messages": "1.5.9",
