--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "0.10.0",
     "html-webpack-plugin": "2.28.0",
-    "http-proxy-middleware": "0.15.0",
     "husky": "^0.11.9",
     "isparta-loader": "2.0.0",
     "istanbul": "0.4.3",
@@ -85,7 +84,9 @@
     "angular-material": "^1.1.3",
     "angular-material-data-table": "^0.10.10",
     "angular-messages": "1.5.9",
+    "angular-socket-io": "^0.7.0",
     "angular-ui-router": "^0.3.2",
+    "socket.io-client": "^1.7.2",
     "whatwg-fetch": "^2.0.1"
   }
 }
