--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "2.10.2",
     "eslint-loader": "1.3.0",
     "express": "^4.14.1",
+    "express-history-api-fallback": "^2.1.0",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "0.10.0",
     "html-webpack-plugin": "2.28.0",
