--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test-tags": "cross-env WATCH_MODE=false karma run -- --grep",
     "dev-install": "npm install phantomjs-prebuilt karma-phantomjs-launcher",
     "test-run": "cross-env WATCH_MODE=false karma run -- --grep",
-    "prepush": "sass-lint -c .sass-lint.yml -v -q -s scss 'client/**/*.scss' && eslint \"client/**/*.js\" && npm run test"
+    "prepush": "sass-lint -c .sass-lint.yml -v -q -s scss 'client/**/*.scss' && eslint \"client/**/*.js\" && npm run test",
+    "heroku-postbuild": "npm run build-client"
   },
   "repository": {
     "type": "git"
